Added security headers & prepared page for CSP support

--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60118515-5"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-60118515-5');
-    </script>
+    <script src="js/analytics.js"></script>
+
+    <link href="css/site.css" rel="stylesheet" >
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,31 +13,6 @@
     <title>Is het al tijd voor stufi?</title>
 </head>
 <body>
-    <style>
-        body {
-            font-family: sans-serif;
-        }
-
-        .container, footer {
-            text-align: center;
-        }
-
-        .container {
-            margin-top: 25vh;
-        }
-
-        footer {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-        }
-
-        a {
-            text-decoration: none;
-        }
-    </style>
-
     <div class="container">
             <h2>Is het al tijd voor stufi?</h2>
             <h1 id="isItToid">Geen idee..</h1>
@@ -50,86 +22,7 @@
     <footer>
         <p>Made with ❤️ by <a href="https://roeldevries.me">Roel de Vries</a></p>
     </footer>
-    
-    <script>
-        // A stufi-transaction will be made on the 24th, unless that date falls in the weekend which in that case the transaction will be made on the Friday before.
-        // 24 December is also skipped: if it falls on Monday or the weekend the transaction will be made on the Friday before. Otherwise the day before the 24th.
 
-        var date = new Date(),
-        daysTillStufi = 0,
-        isItToidElement = document.getElementById('isItToid'),
-        moreInfoElement = document.getElementById('moreInfo'),
-        stufiDate = GetStufiDate();
-
-        // Check if it's already stufi time
-        if(date.getDate() === stufiDate.getDate()) {
-            isItToidElement.innerHTML = 'Ja!';
-            isItToidElement.style.color = '#2ecc71';
-            moreInfoElement.innerHTML = 'Dank u ome Duo!'
-        }
-        else {
-            // Check if we've surpassed this months stufi date
-            if(date.getDate() > stufiDate.getDate()) {
-                stufiDate = GetStufiDate(1);
-            }
-
-            daysTillStufi = CalculateDaysDifference(date, stufiDate);
-
-            isItToidElement.innerHTML = 'Nee!';
-            isItToidElement.style.color = '#e74c3c';
-
-            switch (daysTillStufi) {
-                case 0:
-                    moreInfoElement.innerHTML = 'Nog een paar uur te gaan tot de ' + stufiDate.getDate() + 'e , hou vol!';
-                    break;
-                case 1:
-                    moreInfoElement.innerHTML = 'Nog één dag te gaan tot de ' + stufiDate.getDate() + 'e, hou vol!';
-                    break;
-                default:
-                    moreInfoElement.innerHTML = 'Nog ' + daysTillStufi + ' dagen te gaan tot de ' + stufiDate.getDate() + 'e, hou vol!';
-                    break;
-            }
-        }
-
-        function GetStufiDate(monthOffset = 0) {
-            var countDownDay = 24,
-                dateHelper = new Date(date.getFullYear(), date.getMonth(), countDownDay);
-
-            // Check if a date with a month offset needs to be calculated
-            if(monthOffset) {
-                dateHelper.setMonth(dateHelper.getMonth() + 1);
-            }
-
-            var dayOfWeek = dateHelper.getDay(),
-            month = dateHelper.getMonth();
-
-            // Check if 24th falls:
-            // on a Sunday
-            if(dayOfWeek === 0) {
-                countDownDay = 22;
-            }
-            // on a Saturday
-            else if(dayOfWeek === 6) {
-                countDownDay = 23
-            }
-            // in December
-            else if(month === 11) {
-                // on a Monday
-                if(dayOfWeek === 1) {
-                    countDownDay = 21;
-                }
-                else {
-                    countDownDay = 23;
-                }
-            }
-
-            return new Date(dateHelper.getFullYear(), dateHelper.getMonth(), countDownDay);
-        }
-
-        function CalculateDaysDifference(dateOne, dateTwo) {
-            var oneDay = 24*60*60*1000;
-            return Math.round(Math.abs(dateOne.getTime() - dateTwo.getTime()) / (oneDay));
-        }
-    </script>
+    <script src="js/site.js"></script>
 </body>
 </html>
