Made some scripts load async, updated cps rules

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60118515-5"></script>
-    <script src="js/analytics.js"></script>
+    <script async src="js/analytics.js"></script>
 
     <link href="css/site.css" rel="stylesheet" >
 
