Removed attempt to predict dates. Started developing solution which just downloads dates

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60118515-5"></script>
-    <script async src="js/analytics.js"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60118515-5"></script>
+    <script async src="js/analytics.js"></script> -->
 
     <link href="css/site.css" rel="stylesheet" >
 
@@ -15,14 +15,17 @@
 <body>
     <div class="container">
             <h2>Is het al tijd voor stufi?</h2>
-            <h1 id="isItToid">Geen idee..</h1>
+            <h1 id="isItTime">Geen idee..</h1>
             <p id="moreInfo"> Want je hebt JavaScript uit staan..</p>
     </div>
 
     <footer>
-        <p>Made with ❤️ by <a href="https://roeldevries.me">Roel de Vries</a></p>
+        <p>Made with ❤️ by <a href="https://roel.dev">Roel de Vries</a></p>
     </footer>
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.ajax-cross-origin.min.js"></script>
     <script src="js/site.js"></script>
 </body>
 </html>
