Cleanup +  added info during loading

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60118515-5"></script>
-    <script async src="js/analytics.js"></script> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-60118515-5"></script>
+    <script async src="js/analytics.js"></script>
 
     <link href="css/site.css" rel="stylesheet" >
 
@@ -15,8 +15,8 @@
 <body>
     <div class="container">
             <h2>Is het al tijd voor stufi?</h2>
-            <h1 id="isItTime">Geen idee..</h1>
-            <p id="moreInfo"> Want je hebt JavaScript uit staan..</p>
+            <h1 id="isItTime">Één moment..</h1>
+            <p id="moreInfo">We halen de recente datums voor je op</p>
     </div>
 
     <footer>
