--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.ajax-cross-origin.min.js"></script>
+    <script type="text/javascript" src="js/ajax-cross-origin/client/jquery.ajax-cross-origin.min.js"></script>
     <script src="js/site.js"></script>
 </body>
 </html>
